# tutor_flake

./: .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  poetry_scripts.py  pyproject.toml  setup.cfg
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml
tutor_flake/: ast_example.py  common.py  plugin.py
tutor_flake/example_code/: dummy_code.py  test_async_rules.py  test_classvar_rules.py  test_compact_generic_typing.py  test_constructor.py  test_dataclass_rules.py  test_no_bracket_in_string.py  test_no_sideeffects.py  test_not_implemented.py  test_os_path_rules.py  test_positional_args.py  test_super.py  test_time_rules.py
tutor_flake/rules/: asyncio.py  classvar.py  compact_generic.py  constructor.py  dataclass.py  no_sideeffects.py  not_implemented.py  os_path.py  positional_args.py  string.py  super.py  time.py
