[tool.poetry]
name = "tutor_flake"
version = "0.23.0"
description = "Custom flake rules for use in tutor intelligence"
authors = ["Jack Strang <jack@tutorintelligence.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
flake8 = "^6.0.0"
isort = "^5.10.1"
black = "^22.3.0"
mypy = "^0.961"
astpretty = "^3.0.0"
pre-commit = "^2.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
style = "poetry_scripts:style"
print_ast = "poetry_scripts:print_ast"

[tool.semantic_release]
version_variable = [
    "tutor_flake/__init__.py:__version__",
    "pyproject.toml:version"
]
branch = "main"
upload_to_pypi = false
upload_to_release = false
build_command = "pip install poetry && poetry build"